event explorer design correction on mobile with large size

--- a/newVyana/src/components/eventElement/eventElement.css
+++ b/newVyana/src/components/eventElement/eventElement.css
@@ -19,7 +19,7 @@
 
 @media only screen and (max-width:800px){
     .custom-background{
-        width: 100px;
-        height: 100px;
+        width: 120px;
+        height: 120px;
     }
 }
